--- a/northwind-mcp-client/.env.example
+++ b/northwind-mcp-client/.env.example
@@ -1,2 +1,5 @@
 # MCP Server Configuration
 MCP_SERVER_PATH=path/to/your/northwind-mcp-server
+
+# OpenAI API Key
+OPENAI_API_KEY=your-openai-api-key
