Update README.md file

--- a/northwind-mcp-server/.env.example
+++ b/northwind-mcp-server/.env.example
@@ -1,6 +1,6 @@
 # Database Configuration
 # Replace with your actual AWS RDS connection details
-DATABASE_URL=postgresql://username:password@your-rds-endpoint.region.rds.amazonaws.com:5432/northwind
+DATABASE_URL=postgresql://username:password@your-rds-endpoint/northwind
 
 # Basic Settings
 DEBUG=false
